# backtest-server

./: .dockerignore  .env.dual-db.example  .gitignore  .gitlab-ci.yml  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.db  Makefile.toml  README.md  build.rs  docker-compose-dual-db.yml  docker-compose.yml  env.example  sqlx.toml  test_compile  test_compile.rs
.cargo/: audit.toml  config.toml
.claude/: settings.local.json
.cursor/rules/: rust.mdc
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  performance.yml
.github/PULL_REQUEST_TEMPLATE/: bug_fix.md  documentation.md  feature.md  hotfix.md  refactoring.md
.github/workflows/: add-to-project.yml  ci-dual-db.yml  ci.yml
.gitlab/: ci-lint.sh
.gitlab/issue_templates/: Bug.md  Feature.md
.gitlab/merge_request_templates/: Default.md
config/: development.toml  frequencies.toml  production.toml  test.toml
config/rabbitmq/: definitions.json
docs/: BACKTEST_ARCHITECTURE.md  BACKTEST_DATABASE_SCHEMA.md  CACHE_STRATEGY.md  CI_CD.md  CI_DUAL_DATABASE.md  CI_OPTIMIZATION.md  DATABASE_SEPARATION.md  DB_SCHEMA.md  DEPENDENCIES.md  DSL_RULE.md  MARKET_DATABASE_SCHEMA.md  PLANNING.md  REFACTOR_TASK.md  STRUCTURE.md  TASK.md  THREE_DB_ARCHITECTURE.md  WEBSITE_DB_SCHEMA.md
docs/module/: DOMAIN_TYPES.md
examples/: README.md  config_demo.rs  data_ingestion_demo.rs  data_loader_example.rs  data_provider_config_example.rs  domain_types_demo.rs  dynamic_group_options_info.rs  polars_filter_issue_demo.rs  server_example.rs
migrations/: 20250501000000_create_database_and_extensions.sql  20250501000001_create_base_tables.sql  20250501000002_create_instrument_reference.sql  20250501000002_create_time_series_tables.sql  20250501000003_create_strategy_tables.sql  20250501000004_create_backtest_tables.sql  20250501000005_create_continuous_aggregates.sql  20250501000006_create_technical_indicators.sql  20250501000007_create_database_roles.sql
scripts/: create-migration.sh  init-market-db.sql  run-migration.sh  test-ci-commands.sh  test-ci-readiness.sh  validate-github-workflows.sh
src/: api.rs  backtest.rs  cache.rs  config.rs  data_ingestion.rs  data_provider.rs  domain_types.rs  event.rs  execution.rs  lib.rs  messaging.rs  monitor.rs  redis.rs  runtime.rs  server.rs  storage.rs  strategy.rs  utils.rs
src/api/: auth.rs  handlers.rs  rest.rs  routes.rs
src/cache/: buffer.rs  keys.rs  macros.rs  metrics.rs  multi_level.rs  stats.rs  traits.rs
src/config/: loader.rs  manager.rs  types.rs  validation.rs
src/data_ingestion/: database_writer.rs  processor.rs  validator.rs
src/data_provider/: cache.rs  iterator.rs  loader.rs
src/domain_types/: adjustment.rs  aggregation.rs  asset_types.rs  csv_format.rs  data_matrix.rs  data_point.rs  frame.rs  frequency.rs  indicators.rs  instrument.rs  resampler.rs  series.rs  time_series.rs  types.rs
src/dsl/: compiler.rs  parser.rs  (+1 more)
test-server/: Dockerfile.python  app.py
tests/: common.rs  database_separation_test.rs  domain_types_test.rs  iterator_test.rs  repository_dual_db_test.rs  resampling_test.rs  storage_integration_test.rs  validator_test.rs
(+81 files in other folders)
